--- a/job_verifier_project/templates/base.html
+++ b/job_verifier_project/templates/base.html
@@ -15,8 +15,9 @@
             <a href="{% url 'home' %}" class="brand">Job Verifier</a>
             <ul>
                 <li><a href="{% url 'home' %}">Home</a></li>
-                <li><a href="{% url 'predict' %}">Predict</a></li>
-                <li><a href="{% url 'agent' %}">AI Agent</a></li>
+                <li><span style="color:gray;cursor:not-allowed">Predict (Hold)</span></li>
+<li><span style="color:gray;cursor:not-allowed">AI Agent (Hold)</span></li>
+
                 <li><a href="{% url 'about' %}">About</a></li>
                 <li><a href="{% url 'contact' %}">Contact</a></li>
             </ul>
